--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Rust Project CI
+name: CI
 
 on:
   pull_request:
@@ -39,7 +39,7 @@ jobs:
       - name: Lint
         run: cargo clippy --all-targets --all-features
 
-      - name: Tests
+      - name: Test
         run: cargo test --verbose
 
       - name: Build
