--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lints.rust]
+rust-2018-idioms = "warn"
+rust-2018-compatibility = "warn"
+rust-2021-compatibility = "warn"
+
 [dependencies]
